fixed text and code wrapping

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,7 +37,7 @@ body.large { line-height: 0.7em; font-size: 1em; }
 
 /* LAYOUT */
 .container { margin-right: auto;  margin-left: auto; }
-p { word-wrap: break-word;  word-break: break-word;  white-space: pre-wrap; }
+p { word-wrap: break-word;  word-break: break-word;  white-space: no-wrap; }
 footer { color: var(--text-color);  margin: 20px auto 15px;  padding-top: 10px;  text-align: right; }
 header { margin-top: 25px;  margin-bottom: 10px; }
 header p { text-align: left;  margin: 0; }
