--- a/assets/css/syntax-highlighting.css
+++ b/assets/css/syntax-highlighting.css
@@ -1,6 +1,7 @@
 pre.highlight {
  font: normal 13px/20px 'Source Code Pro', monospace; border:1px solid black; 
  margin: 10px; padding: 10px; line-height: 1em; 
+ white-space: pre-wrap;
 }
 
 .highlight table td { padding: 5px; }
